--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Privacy Policy for SnapInfo</title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="/public/livelink/css/livelink.css" />
+<meta name="robots" content="noindex" />
+<meta property="og:title" content="Privacy Policy for SnapInfo" />
+</head>
+<body>
+<div class="page">
+<div class="header">
+<div class="container">
+<p class="title">Privacy Policy for SnapInfo</p>
+</div>
+</div>
+<div class="translations-content-container">
+<div class="container">
+<div class="tab-content translations-content-item en visible" id="en">
 <h1>Privacy Policy</h1>
 <p>Last updated: August 11, 2024</p>
 <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
-<p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.termsfeed.com/privacy-policy-generator/" target="_blank">Privacy Policy Generator</a>.</p>
 <h2>Interpretation and Definitions</h2>
 <h3>Interpretation</h3>
 <p>The words of which the initial letter is capitalized have meanings defined under the following conditions. The following definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
@@ -21,7 +42,7 @@
 <p><strong>Company</strong> (referred to as either &quot;the Company&quot;, &quot;We&quot;, &quot;Us&quot; or &quot;Our&quot; in this Agreement) refers to SnapInfo.</p>
 </li>
 <li>
-<p><strong>Country</strong> refers to:  Vietnam</p>
+<p><strong>Country</strong> refers to: Vietnam</p>
 </li>
 <li>
 <p><strong>Device</strong> means any device that can access the Service such as a computer, a cellphone or a digital tablet.</p>
@@ -101,7 +122,7 @@
 </ul>
 <p>We may share Your personal information in the following situations:</p>
 <ul>
-<li><strong>With Service Providers:</strong> We may share Your personal information with Service Providers to monitor and analyze the use of our Service,  to contact You.</li>
+<li><strong>With Service Providers:</strong> We may share Your personal information with Service Providers to monitor and analyze the use of our Service, to contact You.</li>
 <li><strong>For business transfers:</strong> We may share or transfer Your personal information in connection with, or during negotiations of, any merger, sale of Company assets, financing, or acquisition of all or a portion of Our business to another company.</li>
 <li><strong>With Affiliates:</strong> We may share Your information with Our affiliates, in which case we will require those affiliates to honor this Privacy Policy. Affiliates include Our parent company and any other subsidiaries, joint venture partners or other companies that We control or that are under common control with Us.</li>
 <li><strong>With business partners:</strong> We may share Your information with Our business partners to offer You certain products, services or promotions.</li>
@@ -149,5 +170,16 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: sieuhuflit@gmail.com</li>
+<li>By email: <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="f0839995859885969c9984b0979d91999cde939f9d">[email&#160;protected]</a></li>
 </ul>
+</div>
+</div>
+</div>
+
+<div class="footer">
+<div class="container">
+</div>
+</div>
+</div>
+</body>
+</html>
